# vhn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: LinearSanityTest.cc.099A004E16D238D5.idx  TrueIsTure.cc.121D14CA4201BF5B.idx  batchnorm1d.hh.53DD601B209137F1.idx  conv1d.hh.0D97038400D912F0.idx  conv2d.hh.74D44E25B6F8B01E.idx  elementwise.hh.FDC4F4EAC7BD4930.idx  gelu.hh.764DDD0FF145B73E.idx  gmock-actions.h.A93258303C79417C.idx  gmock-all.cc.5DEA2E61B4A4046F.idx  gmock-cardinalities.cc.2EFFFD2C29A9271B.idx  gmock-cardinalities.h.57A0EFF4B74E55CF.idx  gmock-function-mocker.h.4A5ABD4E14A63BB7.idx  gmock-generated-actions.h.B89DEAC37CD8BDD3.idx  gmock-internal-utils.cc.6B93BA8585D38988.idx  gmock-internal-utils.h.0509D2B9E6EB2B75.idx  gmock-matchers.cc.D4ED5610161DDC48.idx  gmock-matchers.h.4A8DEA6AF2E95EA5.idx  gmock-matchers.h.5E291E70F86FF083.idx  gmock-more-actions.h.1AD967A7DC0A2009.idx  gmock-more-matchers.h.4AD7CFA694D5E6C7.idx  gmock-nice-strict.h.AD3D051E09765327.idx  gmock-port.h.6E96E6F56C34FE6B.idx  gmock-port.h.BBFE8503109CDCF4.idx  gmock-pp.h.A13809843DB863B7.idx  gmock-spec-builders.cc.6EFB900EF0DC1932.idx  gmock-spec-builders.h.243742B591662F4A.idx  gmock.cc.5AB52EEA457FDDE7.idx  gmock.h.9F4290239414F56C.idx  gmock_main.cc.EE432EBC46193C3E.idx  gtest-all.cc.4F42D68A4EDD5998.idx  gtest-assertion-result.cc.154288A51B49A9B1.idx  gtest-assertion-result.h.04E4D086A6C31FEF.idx  gtest-death-test-internal.h.2FEB4D9E74EA8623.idx  gtest-death-test.cc.2FDAFBF4D66C5038.idx  gtest-death-test.h.62F2B6920F53E1B6.idx  gtest-filepath.cc.A0BAEA48CBCA642F.idx  gtest-filepath.h.AE9B3185C97AD8D7.idx  gtest-internal-inl.h.1528FA8CD6094E44.idx  gtest-internal.h.75E62E46BD7C454B.idx  gtest-matchers.cc.80B1B9DA829E984A.idx  (+34 more)
docs/: HLS_ML.md  README.md
include/: hls.hh  vhn.hh
include/hls/: hls_config.hh  opt_level.hh  types.hh
include/hls/layers/: elementwise.hh
include/hls/layers/acts/: acts.hh  gelu_impl.hh  relu_impl.hh
include/hls/layers/layers/: linear.hh
include/hls/layers/norms/: batchnorm2d.hh
include/hls/models/: mlp.hh  models.hh
include/hls/models/transformer/: decoder.hh  encoder.hh
include/hls/models/transformer/attns/: fused_mha.hh  mha.hh  mhca.hh
include/hls/models/transformer/components/: addnorm.hh  ffn.hh  postnorm.hh  prenorm.hh
include/hls/nn/: base.hh  decls.hh  elementwise.hh  nn.hh  operator_impl.hh  operators.hh  reduce.hh
include/hls/nn/acts/: acts.hh  declarations.hh  decls.hh  gelu.hh  gelu_impl.hh  relu.hh  relu_impl.hh  sigmoid.hh  sigmoid_impl.hh
include/hls/nn/layers/: conv1d.hh  conv2d.hh  embedding.hh  linear.hh  softmax.hh
include/hls/nn/layers/linear/: linear.hh  ref.hh
include/hls/nn/models/: mlp.hh
include/hls/nn/models/transformer/: encoder.hh
include/hls/nn/models/transformer/attns/: fused_mha.hh  mha.hh  mhca.hh
include/hls/nn/models/transformer/components/: addnorm.hh  postnorm.hh  prenorm.hh
include/hls/nn/norms/: batchnorm1d.hh  batchnorm2d.hh  layernorm.hh
include/hls/tb/: tb.hh  testbench.hh
include/vhn/: base.hh  decls.hh  elementwise.hh  operator_impl.hh  operators.hh  opt_level.hh  reduce.hh  types.hh
include/vhn/acts/: acts.hh  gelu_impl.hh  relu_impl.hh  sigmoid_impl.hh
include/vhn/builder/: base.hh  builder.hh  codegen.hh  generator.hh  modulegen.hh  registry.hh  topgen.hh
include/vhn/cpu/: cpu_backend.hh  tensor.hh
include/vhn/cpu/layers/: bn2d.hh  conv2d.hh  maxpool2d.hh  silu.hh  upsample.hh
include/vhn/cpu/models/yolov11/: bottleneck.hh  c3k.hh  c3k2.hh  cbs.hh  concat.hh  model.hh  sppf.hh
include/vhn/cpu/utils/: load_weights.hh
include/vhn/layers/: conv1d.hh  conv1d_builder.hh  conv2d.hh  conv2d_builder.hh  embedding.hh  embedding_builder.hh  layers.hh  linear.hh  linear_builder.hh  softmax.hh  softmax_builder.hh
include/vhn/models/: mlp.hh  mlp_builder.hh  models.hh
include/vhn/models/transformer/: decoder.hh  encoder.hh  encoder_builder.hh
include/vhn/models/transformer/attns/: fused_mha.hh  mha.hh  mha_builder.hh  mhca.hh
include/vhn/models/transformer/components/: addnorm.hh  addnorm_builder.hh  ffn.hh  ffn_builder.hh  postnorm.hh  prenorm.hh
include/vhn/norms/: batchnorm1d.hh  batchnorm2d.hh  bn1d_builder.hh  bn2d_builder.hh  layernorm.hh  ln_builder.hh  norms.hh
include/vhn/operators/: elementwise.hh  elementwise_builder.hh  operators.hh  reduce.hh  reduce_builder.hh  registry.hh
include/vhn/parsers/: json.hh  parsers.hh
include/vhn/tb/: comparator.hh  tb.hh  testcase.hh
logs/: builder.py
scripts/: bootstrap.sh
src/: hls.cc
tests/: CMakeLists.txt
tests/load_weights/: CMakeLists.txt
tests/nn_parser/: CMakeLists.txt  NN_LinearLayerConfig.cc
tests/parser/: CMakeLists.txt  mlp.cc
tests/sanity/: CMakeLists.txt  TrueIsTrue.cc
tools/: CMakeLists.txt  parser.cc
